--- a/kpython/SConscript
+++ b/kpython/SConscript
@@ -39,12 +39,11 @@ python_PROGS = [
 install = []
 builds = []
 
-pylibdir = env.Dir(os.path.join(env['PYTHONDIR'], 'kpython'))
 pydir = env.Dir(env['PYTHONDIR'])
 bindir = env.Dir(env['BINDIR'])
 
 for pf in python_FILES:
-    installed_py = env.Install(dir = pylibdir, target = pf)
+    installed_py = env.Install(dir = pydir, target = pf)
     install.append(installed_py)
 
 for pp in python_PROGS:
