--- a/kpython/SConscript
+++ b/kpython/SConscript
@@ -59,7 +59,9 @@ builds = []
 pydir = env.Dir(env['PYTHONDIR'])
 bindir = env.Dir(env['BINDIR'])
 
-env.Textfile('config.py', ["CONF_DIR = \'$CONFDIR\'"])
+env.Textfile('config.py', ["CONF_DIR = \'$CONFDIR\'",
+                           "PREFIX = \'$PREFIX\'",
+                           "PYTHON_DIR = '\$PYTHONDIR\'"])
 
 for pf in python_FILES:
     installed_py = env.Install(dir = pydir, target = pf)
